--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": "false",
   "keywords": [],
-  "main": "src/index.js",
+  "main": "src/Button.js",
   "dependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0",
